--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,30 @@
-  <!DOCTYPE html>
-  <html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Pokémon Finder</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Pokémon Finder</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-  <body>
-    <h1 class="title">BUSCADOR DE POKEMONES</h1>
-    <div class="buscador">
-      <input type="text" id="pokemonInput" placeholder="Escribe el nombre del Pokémon">
-      <button class="button" onclick="buscarPokemon()">Buscar</button>
-      <button class="button" onclick="mostrarFavoritos()">Mostrar favoritos</button>
-    </div>
-
-
-    <div id="result">
-      <!-- aca estaran des js -->
-    </div>
-
-    <div id="favoritos" class="favoritos-container">
-      
-
-    </div>
+<body>
+  <h1 class="title">BUSCADOR DE POKEMONES</h1>
+  <div class="buscador">
+    <input type="text" id="pokemonInput" placeholder="Escribe el nombre del Pokémon">
+    <button class="button" onclick="buscarPokemon()">Buscar</button>
+    <button class="button" onclick="mostrarFavoritos()">Mostrar favoritos</button>
+  </div>
 
 
-    <script src="scripts.js"></script>
-  </body>
+  <div id="result">
+    <!-- aca estaran des js -->
+  </div>
 
-  </html>
+  <div id="favoritos-all">
+  </div>
+
+
+  <script src="scripts.js"></script>
+</body>
+
+</html>
